add home office blog; css updates

--- a/arizona-sales-tax.html
+++ b/arizona-sales-tax.html
@@ -165,7 +165,7 @@
           >TPT Forms</a
         >.
       </p>
-      <p class="blog-content bold-font">What you'll learn...</p>
+      <p class="bold-font ul-header">What you'll learn...</p>
       <ul class="blog-toc">
         <li>Economic Nexus</li>
         <li>Register for a TPT License</li>
@@ -216,7 +216,7 @@
         The welcome page displays information regarding your registration.
         Select Continue to begin your registration.
       </p>
-      <p>
+      <p class="ul-header">
         ADOR will require information about your business (including but not
         limited to):
       </p>
@@ -259,7 +259,7 @@
         >
         for fast and efficient processing.
       </p>
-      <p>
+      <p class="ul-header">
         <a
           href="https://azdor.gov/transaction-privilege-tax/tpt-license/tpt-filing-frequency"
           target="_blank"
