--- a/escrow-accounting-for-property-managers.html
+++ b/escrow-accounting-for-property-managers.html
@@ -123,7 +123,7 @@
         Now that we have the path, let us map your Chart of Accounts using
         QuickBooks Online (QBO).
       </p>
-      <p class="blog-content bold-font">What you'll learn...</p>
+      <p class="bold-font">What you'll learn...</p>
       <ul class="blog-toc">
         <li>Setup the Escrow Account in QBO</li>
         <li>Add the Purchased Asset to your Books</li>
@@ -132,7 +132,7 @@
       </ul>
       <!-- Next Section -->
       <h2>Setup the Escrow Account in QBO</h2>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         Is the escrow account an
         <a
           href="https://quickbooks.intuit.com/learn-support/en-us/help-article/small-business-processes/learn-common-accounting-terms/L4XveqGiC_US_en_US#sh-viewContent-A"
@@ -168,7 +168,7 @@
       <img
         src="images/s1-go-to-coa.png"
         class="blog-image image-w100"
-        alt="Horacio Bermudez"
+        alt="go to chart of accounts"
       />
       <p>
         To begin the escrow account setup, select the New button to create the
@@ -177,7 +177,7 @@
       <img
         src="images/s1-coa-new-account.png"
         class="blog-image image-w100"
-        alt="Horacio Bermudez"
+        alt="create new chart of accounts"
       />
       <p>
         To create an Other Current Assets account, select the Asset parent
@@ -309,7 +309,7 @@
         and leaser. The escrow and the other related accounts map the physical
         activity to QBO.
       </p>
-      <p class="blog-content bold-font">Escrow is restricted cash</p>
+      <p class="bold-font">Escrow is restricted cash</p>
       <p>
         Escrow is one form of restricted cash. Any cash reserved for a specific
         purpose qualifies as restricted assets. For example, if you set aside
