--- a/questions-to-ask-when-hiring-a-tax-accountant.html
+++ b/questions-to-ask-when-hiring-a-tax-accountant.html
@@ -114,7 +114,7 @@
     </section>
     <section class="blog-container">
       <h2>Qualifications and Licenses</h2>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         What kind of credentials do you have?
       </p>
       <p>
@@ -127,7 +127,7 @@
         but is not required to sign it as permitted by instructions to the
         return or regulations.
       </p>
-      <p class="blog-content bold-font">Who are your other clients?</p>
+      <p class="bold-font">Who are your other clients?</p>
       <p>
         You want to know if the accountant understands the basics of your
         business. You may need someone who is familiar with real estate, and
@@ -140,7 +140,7 @@
         clients, you can ask about the work schedule and whether he has the
         capacity and resources to support you adequately.
       </p>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         Do you perceive any conflicts of interest?
       </p>
       <p>
@@ -149,7 +149,7 @@
         competition. Inquire as to how conflict is managed.
       </p>
       <h2>Communication and Technology</h2>
-      <p class="blog-content bold-font">Is there a timely response?</p>
+      <p class="bold-font">Is there a timely response?</p>
       <p>
         Accounting needs to be done consistently all year. Annual reporting is
         done during the year, most accounting information should be less than 30
@@ -161,7 +161,7 @@
         as possible. This can be a suitable time to ask about support and
         “office hours.”
       </p>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         In this digital age, what is your policy on returning phone calls?
       </p>
       <p>
@@ -169,7 +169,7 @@
         to ask how long you should expect to wait to have a call returned.
         Asking also lets your CPA know you are interested in voice calls.
       </p>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         Who will I be interacting with and do the same people always service my
         account?
       </p>
@@ -184,7 +184,7 @@
         care how the “back room” operates, but you want to know if the person
         interviewing is the one you are working with.
       </p>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         What services do you use to run your business?
       </p>
       <p>
@@ -194,7 +194,7 @@
         or cyber security. Find out if they stay current by asking about their
         research methods, record management and cyber threat response.
       </p>
-      <p class="blog-content bold-font">Do you consider yourself tech-savvy?</p>
+      <p class="bold-font">Do you consider yourself tech-savvy?</p>
       <p>
         Just because the CPA offers software packages does not mean they know
         how to use them. For this reason, a proficient CPA will help you install
@@ -202,7 +202,7 @@
         any kind of software or IT support.
       </p>
       <h2>Services and Support</h2>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         What kind of creative business advice will you offer?
       </p>
       <p>
@@ -211,7 +211,7 @@
         your current tax liability. Beyond preparing tax forms, quarterly
         reviews should be scheduled to ensure books and records are in order.
       </p>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         Are you available outside of the tax season?
       </p>
       <p>
@@ -220,7 +220,7 @@
         season.” Make sure your tax professional is available year-round,
         especially if you were looking for consistent tax planning.
       </p>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         Am I paying the right amount of taxes?
       </p>
       <p>
@@ -233,7 +233,7 @@
         aspects from business entity structure to all legal means to minimize
         and defer tax payments.
       </p>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         Ask yourself: How can the accountant help me make more money?
       </p>
       <p>
@@ -249,7 +249,7 @@
         you are tax planning for the following year or in an IRS audit.
       </p>
       <h2>Billing and Offer Structure</h2>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         Will you be charging me for every phone call?
       </p>
       <p>
@@ -259,13 +259,13 @@
         and evaluating the attention you will need, a tax professional should
         get you an accurate estimate.
       </p>
-      <p class="blog-content bold-font">What is included?</p>
+      <p class="bold-font">What is included?</p>
       <p>
         Make sure you know what is included and expectations up front. The tax
         professional should be asking you questions to let you know what needs
         to be included.
       </p>
-      <p class="blog-content bold-font">
+      <p class="bold-font">
         What can I do to help you with your work and keep the cost to a minimum?
       </p>
       <p>
