update vehcile deduciton blog

--- a/increase-cashflow-by-using-your-car-for-business.html
+++ b/increase-cashflow-by-using-your-car-for-business.html
@@ -63,14 +63,14 @@
         <div class="container-xl p-responsive-blog">
           <div class="gutter-spacious">
             <h1 class="blog-title">
-              Deductions for Business Use of Personal Vehicles for 2024
+              Increase Cashflow by using your Car for Business in 2024
             </h1>
             <p class="blog-summary">
-              Are you a business owner who works from home? Don't lose money to
-              taxes by not claiming a deduction for business use of your home. A
-              "home" includes a house, apartment, or even a boat. It just needs
-              basic living space. Come learn how to easily report this
-              deduction.
+              Drive business forward and enter the world of vehicle tax
+              deductions. See how receipt tracking and savvy expense management
+              can turn your everyday car use into tax savings. Don't lose money
+              to taxes and transform your vehicle into a powerhouse of cash
+              efficiency!
             </p>
             <div class="position-relative z-1 small-image">
               <img
