update vehicle blog head tag

--- a/increase-cashflow-by-using-your-car-for-business.html
+++ b/increase-cashflow-by-using-your-car-for-business.html
@@ -13,14 +13,13 @@
       name="robots"
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
-    <title>Deductions for Business Use of Personal Vehicles for 2024</title>
+    <title>Increase Cashflow by using your Car for Business in 2024 | Bermudez Associates</title>
     <meta
       name="description"
-      content="Are you a business owner who works from home? Don't lose money to
-              taxes by not claiming a deduction for business use of your home. A
-              'home' includes a house, apartment, or even a boat. It just needs
-              basic living space. Come learn how to easily report this
-              deduction."
+      content="Drive business forward and enter the world of vehicle tax
+      deductions. See how receipt tracking and savvy expense management
+      can turn your everyday car use into tax savings. Don't 
+      lose money to taxes and transform your vehicle into a powerhouse of cash efficiency!"
     />
     <meta
       name="keywords"
@@ -28,21 +27,20 @@
     />
     <link
       rel="canonical"
-      href="https://blog.bermudezassociates.com/deductions-for-business-use-of-personal-vehicles"
+      href="https://blog.bermudezassociates.com/increase-cashflow-by-using-your-car-for-business"
     />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="15 Questions to ask when Hiring a Tax Accountant | Bermudez Associates"
+      content="Increase Cashflow by using your Car for Business in 2024 | Bermudez Associates"
     />
     <meta
       property="og:description"
-      content="Are you a business owner who works from home? Don't lose money to
-      taxes by not claiming a deduction for business use of your home. A
-      'home' includes a house, apartment, or even a boat. It just needs
-      basic living space. Come learn how to easily report this
-      deduction."
+      content="Drive business forward and enter the world of vehicle tax
+      deductions. See how receipt tracking and savvy expense management
+      can turn your everyday car use into tax savings. Don't 
+      lose money to taxes and transform your vehicle into a powerhouse of cash efficiency!"
     />
     <meta
       name="keywords"
@@ -50,7 +48,7 @@
     />
     <meta
       property="og:url"
-      content="https://blog.bermudezassociates.com/deductions-for-business-use-of-personal-vehicles"
+      content="https://blog.bermudezassociates.com/increase-cashflow-by-using-your-car-for-business"
     />
     <meta property="og:site_name" content="Bermudez Associates" />
 
