--- a/industry/escrow-accounting-for-property-managers.html
+++ b/industry/escrow-accounting-for-property-managers.html
@@ -80,7 +80,7 @@
         <nav class="nav-menu">
           <ul class="navbar-list">
             <li class="navbar-list-item">
-              <a href="https://community.darkoceantech.com/" class="navbar-link"
+              <a href="https://community.bermudezassociates.com/" class="navbar-link"
                 >Community</a
               >
             </li>
@@ -454,7 +454,7 @@
       <div class="footer-legal-wrapper">
         <p>&copy; 2024 Bermudez Associates LLC</p>
         <a
-          href="https://www.bermudezassociates.com/privacy.html"
+          href="https://community.bermudezassociates.com/privacy/statement"
           target="_blank"
           rel="noopener noreferrer"
           class="text-links secondary-blue-text"
