add rel="noopener noreferrer" to external links for security

--- a/customer/arizona-sales-tax.html
+++ b/customer/arizona-sales-tax.html
@@ -104,7 +104,7 @@
             <li class="navbar-list-item">
               <a
                 target="_blank"
-                rel="noopener"
+                rel="noopener noreferrer"
                 class="navbar-link"
                 href="https://www.bermudezassociates.com/client-center"
                 >Client Center</a
@@ -146,6 +146,7 @@
                 href="https://github.com/horacio-a-bermudez"
                 class="author"
                 target="_blank"
+                rel="noopener noreferrer"
               >
                 <img
                   src="https://avatars.githubusercontent.com/u/158126745?v=4"
@@ -208,6 +209,7 @@
           href="https://azdor.gov/transaction-privilege-tax-tpt"
           target="_blank"
           class="text-links"
+          rel="noopener noreferrer"
           >Transaction privilege tax (TPT)</a
         >. TPT is a tax on a vendor for the privilege of doing business in the
         state of Arizona. If your business sells products or provides services
@@ -216,6 +218,7 @@
         pay the tax, requires a license administered by the
 
         <a href="https://azdor.gov/" target="_blank" class="text-links"
+        rel="noopener noreferrer"
           >Arizona Department of Revenue (ADOR)</a
         >
         . ADOR collects the tax for the counties and cities. Tax rates vary
@@ -227,6 +230,7 @@
           href="https://azdor.gov/forms/tpt-forms/arizona-resale-certificate"
           class="text-links"
           target="_blank"
+          rel="noopener noreferrer"
           >Arizona Resale Certificate, Form 5000A</a
         >
         , must be provided to your vendors which allows them to defer the
@@ -241,18 +245,21 @@
           href="https://azdor.gov/taxpayer-education/online-tutorials/tpt-tutorials"
           class="text-links"
           target="_blank"
+          rel="noopener noreferrer"
           >TPT Tutorials</a
         >,
         <a
           href="https://azdor.gov/taxpayer-education/tpt-notices-and-correspondence-resource-center#Glossary"
           class="text-links"
           target="_blank"
+          rel="noopener noreferrer"
           >TPT Notices and Correspondence Resource Center</a
         >, and
         <a
           href="https://azdor.gov/forms/tpt-forms"
           class="text-links"
           target="_blank"
+          rel="noopener noreferrer"
           >TPT Forms</a
         >.
       </p>
@@ -276,6 +283,7 @@
           href="https://azdor.gov/transaction-privilege-tax/nexus-program-tpt"
           target="_blank"
           class="text-links"
+          rel="noopener noreferrer"
           >Arizona nexus</a
         >
         is triggered when your business has a physical presence in the state or
@@ -291,6 +299,7 @@
           href="https://aztaxes.gov/Home/Page"
           target="_blank"
           class="text-links"
+          rel="noopener noreferrer"
           >AZTaxes.gov</a
         >. Select <span class="italics">Login to AZTaxes</span>.
       </p>
@@ -334,6 +343,7 @@
           href="https://azdor.gov/sites/default/files/media/PUBLICATION_TPT_TPT2-stepbystep.pdf"
           target="_blank"
           class="text-links"
+          rel="noopener noreferrer"
           >step-by-step instructions</a
         >
         provided by ADOR.
@@ -346,6 +356,7 @@
           href="https://aztaxes.gov/Home/Page"
           target="_blank"
           class="text-links"
+          rel="noopener noreferrer"
           >online tax system</a
         >
         for fast and efficient processing.
@@ -355,6 +366,7 @@
           href="https://azdor.gov/transaction-privilege-tax/tpt-license/tpt-filing-frequency"
           target="_blank"
           class="text-links"
+          rel="noopener noreferrer"
           >ADOR assigns filing frequencies</a
         >
         determined by the amount of a business' total estimated annual combined
@@ -397,6 +409,7 @@
           href="https://azdor.gov/transaction-privilege-tax/due-dates"
           target="_blank"
           class="text-links"
+          rel="noopener noreferrer"
           >filing due dates</a
         >
         for all filing frequencies.
