correct links; update subtitle

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
               system of asynchronous learning. This is our attempt to do just
               that.
             </p>
-            <h2 class="h4 light-grey-text">Bookkeeping is the foundation</h2>
+            <h2 class="h4 light-grey-text">Business Owners & Bookkeepers...</h2>
+            <h3 class="h5 light-grey-text">Can't we all just get along..</h3>
           </div>
         </div>
       </div>
@@ -127,7 +128,7 @@
               <div class="hit-content">
                 <a
                   href="vendor/manage-1099-nec-nonemployee-compensation.html"
-                  ><p class="hit-date">January 7, 2025</p>
+                  ><p class="hit-date">January 14, 2025</p>
                   <h3 class="hit-title">
                     Manage 1099-NEC Nonemployee Compensation
                   </h3>
@@ -250,8 +251,7 @@
           </div>
         </div> -->
       </div>
-    </section>
-    
+    </section>   
     <!-- Preview -->
     <section class="section black-bg">
       <div class="container">
